--- a/src/app/src/main/res/layout/activity_main_menu.xml
+++ b/src/app/src/main/res/layout/activity_main_menu.xml
@@ -45,6 +45,14 @@
                 android:text="@string/dummy_button" />
 
         </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal|top"
+            android:onClick="DEBUG_onClickMethod" />
     </FrameLayout>
 
 </FrameLayout>
