--- a/src/app/src/main/res/layout/activity_main_menu.xml
+++ b/src/app/src/main/res/layout/activity_main_menu.xml
@@ -47,9 +47,9 @@
         </LinearLayout>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
+            android:layout_width="343dp"
+            android:layout_height="73dp"
+            android:text="@string/quiz_mode_singleplayer"
             android:id="@+id/button"
             android:layout_gravity="center_horizontal|top"
             android:onClick="DEBUG_onClickMethod" />
