--- a/src/app/src/main/res/layout/activity_profile_creation.xml
+++ b/src/app/src/main/res/layout/activity_profile_creation.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context=".Activity.MainMenu">
+    tools:context=".Activity.ProfileSelection">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -34,8 +34,7 @@
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay"
             android:orientation="horizontal"
-            tools:ignore="UselessParent"
-            android:visibility="invisible">
+            tools:ignore="UselessParent">
 
             <Button
                 android:id="@+id/dummy_button"
@@ -43,20 +42,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/dummy_button"
-                android:visibility="invisible" />
+                android:text="@string/dummy_button" />
 
         </LinearLayout>
-
-        <Button
-            android:layout_width="343dp"
-            android:layout_height="73dp"
-            android:text="@string/quiz_mode_singleplayer"
-            android:id="@+id/btn_singleplayer"
-            android:layout_gravity="center|bottom|top"
-            android:onClick="DEBUG_onClickMethod"
-            android:layout_marginTop="100dp" />
-
     </FrameLayout>
 
 </FrameLayout>
