--- a/src/app/src/main/res/layout/activity_results.xml
+++ b/src/app/src/main/res/layout/activity_results.xml
@@ -1,172 +1,129 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
     tools:context="de.thenutheads.jlndbe.quizdroid.Activity.Results">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
+    // Player Name
     <TextView
-        android:id="@+id/fullscreen_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="#33b5e5"
-        android:textSize="50sp"
-        android:textStyle="bold" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/label_results_name"
+        android:id="@+id/label_player_name"
+        android:labelFor="@id/out_player_name"/>
 
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/debug_default_text"
+        android:id="@+id/out_player_name"
 
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="?metaButtonBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent"
-            android:visibility="invisible">
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/label_player_name"
+        android:layout_alignBaseline="@+id/label_player_name"/>
 
-            <Button
-                android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button"
-                android:enabled="false"
-                android:visibility="invisible" />
 
-        </LinearLayout>
+    // Score
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/label_results_score"
+        android:id="@+id/label_score"
+        android:labelFor="@id/out_score"
 
-        <TableLayout
-            android:layout_width="305dp"
-            android:layout_height="457dp"
-            android:layout_gravity="center">
+        android:layout_below="@+id/label_player_name"/>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/debug_default_text"
+        android:id="@+id/out_score"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Name:"
-                    android:id="@+id/txt_name_label" />
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/label_score"
+        android:layout_alignBaseline="@+id/label_score"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="DEFAULT"
-                    android:id="@+id/name"
-                    android:layout_column="9" />
-            </TableRow>
+    // Correct Answers
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/label_results_correct_answers"
+        android:id="@+id/label_correct_answers"
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        android:labelFor="@id/out_correct_answers"
+        android:layout_below="@+id/label_score"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Score:"
-                    android:id="@+id/txt_score_label"
-                    android:layout_column="0" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/debug_default_text"
+        android:id="@+id/out_correct_answers"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="9001"
-                    android:id="@+id/score"
-                    android:layout_column="9" />
-            </TableRow>
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/label_correct_answers"
+        android:layout_alignBaseline="@+id/label_correct_answers"/>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    // Category
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/label_results_category"
+        android:id="@+id/label_category"
+        android:labelFor="@id/out_player_name"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Correct Answers:"
-                    android:id="@+id/label_correct_answers"
-                    android:layout_column="0" />
+        android:layout_below="@+id/label_correct_answers"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="0 from10"
-                    android:id="@+id/correct_answers"
-                    android:layout_column="9" />
-            </TableRow>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/debug_default_text"
+        android:id="@+id/out_category"
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/label_category"
+        android:layout_alignBaseline="@+id/label_category"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Category:"
-                    android:id="@+id/txt_label_category"
-                    android:layout_column="0" />
+    // Difficulty
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/label_results_difficulty"
+        android:id="@+id/label_difficulty"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="History"
-                    android:id="@+id/category"
-                    android:layout_column="9" />
-            </TableRow>
+        android:layout_below="@id/label_category"
+        />
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/debug_default_text"
+        android:id="@+id/out_difficulty"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Difficulty:"
-                    android:id="@+id/label_difficulty"
-                    android:layout_column="0" />
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/label_difficulty"
+        android:layout_alignBaseline="@+id/label_difficulty"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium"
-                    android:id="@+id/difficulty"
-                    android:layout_column="9" />
-            </TableRow>
+    // Ok Button
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_Ok"
+        android:id="@+id/btn_ok"
+        android:layout_gravity="center_horizontal|bottom"
+        android:onClick="onClickOk"
 
-        </TableLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"/>
 
-        <Button
-            android:layout_width="153dp"
-            android:layout_height="58dp"
-            android:text="OK"
-            android:id="@+id/btn_ok"
-            android:layout_gravity="center_horizontal|bottom"
-            android:onClick="onClickOk" />
-    </FrameLayout>
-
-</FrameLayout>
+</RelativeLayout>
