--- a/src/app/src/main/res/layout/activity_quiz_stage.xml
+++ b/src/app/src/main/res/layout/activity_quiz_stage.xml
@@ -26,6 +26,7 @@
             android:textStyle="normal"
             android:onClick="onSelectAnswer"
             android:text="@string/debug_lorem_ipsum_short"
+            android:background="@drawable/button_design"
             />
 
         <Button
@@ -35,6 +36,7 @@
             android:textStyle="normal"
             android:text="@string/debug_lorem_ipsum_short"
             android:onClick="onSelectAnswer"
+            android:background="@drawable/button_design"
             />
 
         <Button
@@ -44,6 +46,7 @@
             android:textStyle="normal"
             android:text="@string/debug_lorem_ipsum_short"
             android:onClick="onSelectAnswer"
+            android:background="@drawable/button_design"
             />
 
         <Button
@@ -53,6 +56,7 @@
             android:textStyle="normal"
             android:text="@string/debug_lorem_ipsum_short"
             android:onClick="onSelectAnswer"
+            android:background="@drawable/button_design"
             />
     </LinearLayout>
 
