--- a/src/app/src/main/res/layout/item_player_profile.xml
+++ b/src/app/src/main/res/layout/item_player_profile.xml
@@ -8,8 +8,7 @@
         android:id="@+id/item_profile_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@android:drawable/sym_def_app_icon"
-        android:contentDescription="@string/profile_icon_description" />
+        android:src="@android:drawable/sym_def_app_icon"/>
 
     <TextView
         android:id="@+id/item_player_name"
@@ -48,17 +47,15 @@
         android:layout_alignParentTop="true"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@android:drawable/ic_menu_edit"
-        android:contentDescription="@string/item_edit_icon_description" />
+        android:src="@android:drawable/ic_menu_edit"/>
 
     <ImageView
         android:id="@+id/studentIconDelete"
         android:layout_alignBaseline="@id/profile_icon_edit"
-        android:layout_toLeftOf="@id/studentIconEdit"
+        android:layout_toLeftOf="@id/profile_icon_edit"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@android:drawable/ic_menu_delete"
-        android:onClick="onClickRemoveStudent"
-        android:contentDescription="@string/student_delete_icon_description" />
+        android:onClick="onClickRemoveStudent"/>
 
 </RelativeLayout>
