--- a/src/app/src/main/res/values/quiz_categories.xml
+++ b/src/app/src/main/res/values/quiz_categories.xml
@@ -3,4 +3,5 @@
     <string name="category_sports">Sports</string>
     <string name="category_geographics">Geographics</string>
     <string name="category_history">History</string>
+    <string name="category_naturalsciences"></string>
 </resources>
