--- a/src/app/src/main/res/layout/activity_main_menu.xml
+++ b/src/app/src/main/res/layout/activity_main_menu.xml
@@ -5,23 +5,83 @@
     android:background="#0099cc"
     tools:context=".Activity.MainMenu">
 
-    <Button
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/quiz_mode_singleplayer"
-        android:id="@+id/btn_singleplayer"
-        android:onClick="DEBUG_onClickMethod"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/app_name"
+        android:id="@+id/title_app"
+        android:layout_alignParentStart="true"
 
+        android:layout_margin="8dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_activity_main_menu"
+        android:id="@+id/title_main_menu"
+
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+
+        android:layout_below="@id/title_app" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/title_main_menu_logo"
+        android:src="@mipmap/ic_launcher"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentEnd="true"
 
-    <Button
-        android:layout_width="match_parent"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/description_app_logo" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Debug: Settings"
-        android:id="@+id/button"
-        android:onClick="DEBUG_onClickSettings"
+        android:id="@+id/btn_app_settings"
+        android:layout_gravity="center_horizontal"
+        android:src="@android:drawable/ic_menu_preferences"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_margin="10dp"
+        android:contentDescription="@string/description_app_settings" />
 
-        android:layout_below="@id/btn_singleplayer"/>
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:layout_below="@id/title_main_menu">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/quiz_mode_singleplayer"
+            android:id="@+id/btn_singleplayer"
+            android:onClick="onClick_Singleplayer"
+
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_versus"
+            android:id="@+id/btn_versus"
+            android:onClick="onClick_Versus"
+
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
