--- a/src/app/src/main/res/layout/activity_quiz_setup.xml
+++ b/src/app/src/main/res/layout/activity_quiz_setup.xml
@@ -3,36 +3,131 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context="de.thenutheads.jlndbe.quizdroid.Activity.QuizSetup">
+    tools:context=".Activity.Setup">
 
 
-    <Spinner
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/sp_category"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_activity_quiz_setup"
+        android:id="@+id/title_setup"
+        android:layout_margin="20dp"
+        android:textStyle="bold" />
 
-    <Spinner
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/sp_difficulty"
-        android:layout_below="@+id/sp_category"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/title_logo"
+        android:layout_alignParentEnd="true"
+        android:src="@mipmap/ic_launcher"
 
-    <Spinner
+        android:layout_margin="20dp"
+        android:contentDescription="@string/description_app_logo" />
+
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/sp_length"
-        android:layout_below="@+id/sp_difficulty"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2"
+        android:text="@string/button_Ok"
+        android:id="@+id/btn_setup_next"
+        android:onClick="onClick_StartQuiz"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentRight="true"
+
+        android:layout_margin="10dp"
+        android:src="@android:drawable/ic_media_play"
+        android:contentDescription="@string/button_play_quiz" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:layout_below="@id/title_setup"
+        android:layout_marginTop="30dp"
+        android:clickable="false">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/label_setup_category"
+                android:id="@+id/label_category"
+
+                android:layout_marginBottom="50dp"
+                android:layout_marginLeft="35dp"/>
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/label_setup_difficulty"
+                android:id="@+id/label_difficulty"
+
+                android:layout_below="@id/label_category"
+                android:layout_marginBottom="50dp"
+                android:layout_marginLeft="35dp"/>
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/label_setup_length"
+                android:id="@+id/label_length"
+
+                android:layout_below="@id/label_difficulty"
+                android:layout_marginBottom="50dp"
+                android:layout_marginLeft="35dp"/>
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sp_category"
+                android:layout_alignParentTop="false"
+
+                android:layout_marginLeft="10dp"
+                android:layout_alignBaseline="@id/label_category"
+                android:spinnerMode="dialog"
+                android:layout_toEndOf="@+id/label_category"
+
+                android:layout_marginRight="35dp"
+                android:layout_alignParentRight="true"/>
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sp_difficulty"
+                android:layout_alignParentTop="false"
+
+                android:layout_marginLeft="10dp"
+                android:layout_alignBaseline="@id/label_difficulty"
+                android:spinnerMode="dialog"
+                android:layout_toEndOf="@id/label_category"
+
+                android:layout_marginRight="35dp"
+                android:layout_alignParentRight="true"
+                />
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sp_length"
+                android:layout_below="@+id/sp_difficulty"
+                android:layout_alignParentTop="false"
+
+                android:layout_marginLeft="10dp"
+                android:layout_alignBaseline="@id/label_length"
+                android:spinnerMode="dialog"
+                android:layout_toEndOf="@+id/label_length"
+
+                android:layout_marginRight="35dp"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
+    </LinearLayout>
+
 </RelativeLayout>
