--- a/src/app/src/main/res/values/quiz_difficulties.xml
+++ b/src/app/src/main/res/values/quiz_difficulties.xml
@@ -3,4 +3,5 @@
     <string name="quiz_difficulty_easy">Easy</string>
     <string name="quiz_difficulty_normal">Normal</string>
     <string name="quiz_difficulty_hard">Hard</string>
+    <string name="quiz_difficulty_all">All</string>
 </resources>
